--- a/Voice_copy/Voice_copy/APP_Add/SearchAppViewController.xib
+++ b/Voice_copy/Voice_copy/APP_Add/SearchAppViewController.xib
@@ -20,7 +20,7 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="nav_head" translatesAutoresizingMaskIntoConstraints="NO" id="g6M-x3-esR">
-                    <rect key="frame" x="0.0" y="-6" width="414" height="186.5"/>
+                    <rect key="frame" x="0.0" y="0.0" width="414" height="186.5"/>
                     <constraints>
                         <constraint firstAttribute="width" secondItem="g6M-x3-esR" secondAttribute="height" multiplier="1:0.45" id="XXL-u6-eMl"/>
                     </constraints>
@@ -74,7 +74,7 @@
                     </userDefinedRuntimeAttributes>
                 </tableView>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pH9-3Q-gF9">
-                    <rect key="frame" x="32" y="46" width="30" height="30"/>
+                    <rect key="frame" x="20" y="46" width="30" height="30"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="30" id="M31-RO-32I"/>
                         <constraint firstAttribute="height" constant="30" id="uzf-Z1-gfe"/>
@@ -90,14 +90,14 @@
                 <constraint firstItem="4HQ-fh-8Yc" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="32" id="DaV-g9-2qu"/>
                 <constraint firstAttribute="trailing" secondItem="4HQ-fh-8Yc" secondAttribute="trailing" constant="32" id="PRs-V5-bgv"/>
                 <constraint firstItem="g6M-x3-esR" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="chn-YM-mMr"/>
-                <constraint firstItem="pH9-3Q-gF9" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="32" id="dE1-0I-SUq"/>
+                <constraint firstItem="pH9-3Q-gF9" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="20" id="dE1-0I-SUq"/>
                 <constraint firstItem="00B-BT-dTT" firstAttribute="leading" secondItem="g6M-x3-esR" secondAttribute="leading" id="dtu-J7-66D"/>
                 <constraint firstItem="fWk-D7-hx0" firstAttribute="centerX" secondItem="g6M-x3-esR" secondAttribute="centerX" id="fOX-qh-v1p"/>
                 <constraint firstAttribute="trailing" secondItem="g6M-x3-esR" secondAttribute="trailing" id="l7O-je-a9s"/>
                 <constraint firstItem="00B-BT-dTT" firstAttribute="bottom" secondItem="i5M-Pr-FkT" secondAttribute="bottom" constant="50" id="mV6-wX-4kr"/>
                 <constraint firstItem="00B-BT-dTT" firstAttribute="top" secondItem="4HQ-fh-8Yc" secondAttribute="bottom" constant="23" id="mVM-Fi-GsX"/>
                 <constraint firstItem="4HQ-fh-8Yc" firstAttribute="top" secondItem="fWk-D7-hx0" secondAttribute="bottom" constant="8" id="ozk-C6-FCy"/>
-                <constraint firstItem="g6M-x3-esR" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="-6" id="sQK-g8-ayy"/>
+                <constraint firstItem="g6M-x3-esR" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="sQK-g8-ayy"/>
             </constraints>
             <point key="canvasLocation" x="131.8840579710145" y="91.741071428571431"/>
         </view>
